disable console for release build config

--- a/src/main/CMakeLists.txt
+++ b/src/main/CMakeLists.txt
@@ -75,7 +75,11 @@ if(APPLE)
 elseif("${CMAKE_SYSTEM_NAME}" STREQUAL "WindowsStore")
 	set(EXE_TYPE)
 elseif(MSVC)
-	set(EXE_TYPE)
+	if("${CMAKE_BUILD_TYPE}" STREQUAL "Release")
+		set(EXE_TYPE "WIN32")
+	else()
+		set(EXE_TYPE)
+	endif()
 else()
 	set(EXE_TYPE)
 endif()
